Добавил логику броннирования и комментариев исходя из тех задания